--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "cra-template": "1.2.0",
     "framer-motion": "^12.0.6",
     "react": "^18.2.0",
@@ -36,7 +37,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.31"
   }
 }
